--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="EN">
 
 <head>
   <meta charset="utf-8">
@@ -9,9 +9,8 @@
   <meta name="description" content="">
 
   <meta property="og:title" content="Metrolics page">
-  <meta property="og:type" content="">
+  <meta property="og:type" content="website">
   <meta property="og:url" content="http://localhost:8888/metrolics/">
-  <meta property="og:image" content="">
 
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="icon" href="/icon.svg" type="image/svg+xml">
