part 1 fixing classnames section a: index.html

--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
 <body>
   <script src="js/app.js"></script>
 
-<header class="headerOuterContainer">
-  <div class="headerContainer">
-    <div class="headerText">
+<header class="header">
+  <div class="header__menu">
+    <div class="header__menu-logo">
       <h1>Metrolics</h1>
     </div>
-    <div class="navigation">
+    <div class="header__menu-nav">
       Item 1
       Item 2
       Item 3
       Item 4
       Item 5
     </div>
-    <div class="navigation"></div>
-  </div>
+
+    
 </header>
 
 <main>
