--- a/index.html
+++ b/index.html
@@ -93,27 +93,27 @@
     </div>
   </div>
 
-  <div class="projectsSectionContainer">
-    <div class="projectsOuterContainer">
-      <div class="projectsSectionHeading">
+  <div class="section">
+    <div class="section-projects">
+      <div class="section-projects-heading">
         <h3>Our Latest Projects</h3>
       </div>
-      <div class="projectsCardContainer">
+      <div class="image">
         <h4>This is a project card</h4>
       </div>
-      <div class="projectsCardContainer">
+      <div class="image">
         <h4>Another project card</h4>
       </div>
-      <div class="projectsCardContainer">
+      <div class="image">
         <h4>A project card again</h4>
       </div>
-      <div class="projectsCardContainer">
+      <div class="image">
         <h4>Yet another project card</h4>
       </div>
-      <div class="projectsCardContainer">
+      <div class="iamge">
         <h4>Project card five</h4>
       </div>
-      <div class="projectsCardContainer">
+      <div class="image">
         <h4>The final project card</h4>
       </div>
     </div>
