editing all classnames of section a: index.html

--- a/index.html
+++ b/index.html
@@ -40,34 +40,34 @@
 </header>
 
 <main>
-  <div class="bannerContainer">
-    <div class="banner">
+  <div class="banner">
+    <div class="banner-header">
       <h1>This is a picture of the Minions</h1>
     </div>
   </div>
-  <div class="mainHeadingOuterContainer">
-    <div class="mainHeadingContainer">
-      <div class="mainHeadingText">
+  <div class="section">
+    <div class="header">
+      <div class="header-text">
         <h2>Hey guys! This is the Metrolics theme. It sports a responsive layout with a mobile layout.</h2>
       </div>
     </div>
   </div>
 
-  <div class="cardsSectionContainer">
-    <div class="cardsOuterContainer">
-      <div class="cardSectionHeading">
+  <div class="section">
+    <div class="services">
+      <div class="ervices-heading">
         <h3>Things That We Do</h3>
       </div>
-      <div class="cardContainer">
+      <div class="services-card">
         This is a card
       </div>
-      <div class="cardContainer">
+      <div class="services-card">
         This is another card 
       </div>
-      <div class="cardContainer">
+      <div class="services-card">
         This is a card again
       </div>
-      <div class="cardContainer">
+      <div class="services-card">
         This is yet another card
       </div>
     </div>
@@ -75,18 +75,18 @@
     </div>
   </div>
 
-  <div class="newsSectionContainer">
-    <div class="newsOuterContainer">
-      <div class="newsSectionHeading">
+  <div class="section">
+    <div class="work">
+      <div class="work-heading">
         <h3>What's Up Lately</h3>
       </div>
-      <div class="newsCardContainer">
+      <div class="image">
         <h4>This is a news card</h4>
       </div>
-      <div class="newsCardContainer">
+      <div class="image">
         <h4>This is another news card</h4>
       </div>
-      <div class="newsCardContainer">
+      <div class="image">
         <h4>Yet another news card</h4>
       </div>
     </div>
