Finishing responsive layout for tablet and mobile

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </div>
 
   <div class="section">
-    <div class="row m-col-5 services">
+    <div class="row m-col-2 services">
       <div class="col m-row-span services-heading">
         <h3>Things That We Do</h3>
       </div>
@@ -76,11 +76,11 @@
   </div>
 
   <div class="section">
-    <div class="row work">
-      <div class="col work-heading">
+    <div class="row m-col-2 work">
+      <div class="col m-row-span work-heading">
         <h3>What's Up Lately</h3>
       </div>
-      <div class="col image">
+      <div class="col m-row-span image">
         <h4>This is a news card</h4>
       </div>
       <div class="col image">
@@ -93,8 +93,8 @@
   </div>
 
   <div class="section">
-    <div class="row projects">
-      <div class="col projects-heading">
+    <div class="row m-col-2 projects">
+      <div class="col m-row-span projects-heading">
         <h3>Our Latest Projects</h3>
       </div>
       <div class="col image">
@@ -133,7 +133,7 @@
   </div>
 
   <div class="section">
-    <div class="row affiliates">
+    <div class="row m-col-5 affiliates">
       <div class="col affiliates-card">
         <h4>NetBeans</h4>
       </div>
@@ -153,8 +153,8 @@
   </div>
 </main>
 <footer class="section">
-  <div class="row footer">
-    <div class="col footer-heading">
+  <div class="row m-col-2 footer">
+    <div class="col m-row-span footer-heading">
       <h3>This the heading component inside the footer</h3>
     </div>
     <div class="col footer-item">
