Adding the images to the page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <main>
   <div class="page__banner">
     <div class="col banner-header">
-      <h1>This is a picture of the Minions</h1>
+      <img src="images/pink_otter.jpg">
     </div>
   </div>
   <div class="page__section">
@@ -59,20 +59,20 @@
         <p>Ask us what we can do for you</p>
       </div>
       <div class="col services-card">
-        <h4>Web solutions</h4>
-        We are a fairly small, flexible design studio that designs for print and web. We work flexibly with clients to fulfil their design needs. Whether you need to create a brand from scratch, including marketing materials
+        <h4>Otter solutions</h4>
+        We are a fairly small, flexible otter studio that designs for print and web. We work flexibly with otters to fulfil their design needs. Whether you need to create an otter from scratch, including marketing materials
       </div>
       <div class="col services-card">
         <h4>Photography</h4>
-        We are a fairly small, flexible design studio that designs for print and web. We work flexibly with clients to fulfil their design needs. Whether you need to create a brand from scratch, including marketing materials
+        We are a fairly small, flexible otter studio that designs for print and web. We work flexibly with otters to fulfil their design needs. Whether you need to create an otter from scratch, including marketing materials
       </div>
       <div class="col services-card">
-        <h4>Web Development</h4>
-        We are a fairly small, flexible design studio that designs for print and web. We work flexibly with clients to fulfil their design needs. Whether you need to create a brand from scratch, including marketing materials
+        <h4>Otter Development</h4>
+        We are a fairly small, flexible otter studio that designs for print and web. We work flexibly with otters to fulfil their design needs. Whether you need to create an otter from scratch, including marketing materials
       </div>
       <div class="col services-card">
-        <h4>Web Design</h4>
-        We are a fairly small, flexible design studio that designs for print and web. We work flexibly with clients to fulfil their design needs. Whether you need to create a brand from scratch, including marketing materials
+        <h4>Otter Design</h4>
+        We are a fairly small, flexible otter studio that designs for print and web. We work flexibly with otters to fulfil their design needs. Whether you need to create an otter from scratch, including marketing materials
       </div>
     </div>
   </div>
@@ -83,16 +83,16 @@
     <div class="row m-col-2 l-col-3">
       <div class="col m-row-span l-row-span heading">
         <h3>What's Up Lately</h3>
-        <p>Read up on our latest work</p>
+        <p>Read up on our latest otters</p>
       </div>
       <div class="col m-row-span image">
-        <img src="placeholder.svg" alt="">
+        <img src="images/otter7.jpg" alt="Otter Fall">
       </div>
       <div class="col image">
-        <img src="placeholder.svg" alt="">
+        <img src="images/otter8.jpg" alt="Sleepy Otter">
       </div>
       <div class="col image">
-        <img src="placeholder.svg" alt="">
+        <img src="images/otter9.jpg" alt="Madi the Otter">
       </div>
     </div>
   </div>
@@ -100,26 +100,26 @@
   <div class="section-projects">
     <div class="row m-col-2 l-col-3">
       <div class="col m-row-span l-row-span heading">
-        <h3>Our Latest Projects</h3>
-        <p>Client happy? We are happy.</p>
+        <h3>Our Latest Otters</h3>
+        <p>Otter happy? We are happy.</p>
       </div>
       <div class="col image">
-        <img src="placeholder.svg" alt="">
+        <img src="images/otter1.jpg" alt="Curious Otter">
       </div>
       <div class="col image">
-        <img src="placeholder.svg" alt="">
+        <img src="images/otter2.jpg" alt="Teasing Otter">
       </div>
       <div class="col image">
-        <img src="placeholder.svg" alt="">
+        <img src="images/otter3.jpg" alt="Otter Playing Dead">
       </div>
       <div class="col image">
-        <img src="placeholder.svg" alt="">
+        <img src="images/otter4.jpg" alt="Pondering Otter">
       </div>
       <div class="col image">
-        <img src="placeholder.svg" alt="">
+        <img src="images/otter5.jpg" alt="Loving Otters">
       </div>
       <div class="col image">
-        <img src="placeholder.svg" alt="">
+        <img src="images/otter6.jpg" alt="Wise Otter">
       </div>
     </div>
   </div>
@@ -128,13 +128,13 @@
     <div class="row l-col-2">
       <div class="col l-row-span heading">
         <h3>Thingsofabove</h3>
-        <p>Misc stuff we could not put anyplace else</p>
+        <p>Misc otters we could not put anyplace else</p>
       </div>
       <div class="col misc-content">
-        <img src="placeholder.svg" alt="logo of NetBeans affiliate">
+        <img src="images/otter10.jpg" alt="Snazzy Otter">
       </div>
       <div class="col misc-content">
-        <img src="placeholder.svg" alt="logo of NetBeans affiliate">
+        <img src="images/otter11.jpg" alt="Hello Kitty Otter">
       </div>
     </div>
   </div>
@@ -142,19 +142,19 @@
   <div class="section-affiliates">
     <div class="row m-col-5 l-col-5">
       <div class="col affiliates-card">
-        <img src="placeholder.svg" alt="logo of NetBeans affiliate">
+        <img src="images/otter12.jpg" alt="Otter Hug">
       </div>
       <div class="col affiliates-card">
-        <img src="placeholder.svg" alt="logo of Krita affiliate">
+        <img src="images/otter13.jpg" alt="Otter Stretch">
       </div>
       <div class="col affiliates-card">
-        <img src="placeholder.svg" alt="logo of Scirra affiliate">
+        <img src="images/otter14.jpg" alt="Surprised Otter">
       </div>
       <div class="col affiliates-card">
-        <img src="placeholder.svg" alt="logo of Blender affiliate">
+        <img src="images/otter15.jpg" alt="Otter Bath">
       </div>
       <div class="col affiliates-card">
-        <img src="placeholder.svg" alt="logo of Inkscape affiliate">
+        <img src="images/otter16.jpg" alt="Otter Bear">
       </div>
     </div>
   </div>
