Adding modifications to the header section

--- a/index.html
+++ b/index.html
@@ -30,11 +30,26 @@
       <h1>Metrolics</h1>
     </div>
     <div class="col header__menu-nav">
-      Home
+      <div class="header__menu-nav__item">
+        Home
+      </div>
+      <div class="header__menu-nav__item">
       Pages
+      </div>
+      <div class="header__menu-nav__item">
       Blog
+      </div>
+      <div class="header__menu-nav__item">
       Portfolio
-      Home
+      </div>
+      <div class="header__menu-nav__item">
+        <div class="header__menu-nav__item__image">
+          <img src="images/fi-xnluxl-envelope.svg">
+        </div>
+        <div class="header__menu-nav__item__text">
+          <p>Home</p>
+        </div>
+      </div>
     </div>
 </header>
 
