Completing the header section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="icon" href="/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="icon.png">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous">
 
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
@@ -27,30 +28,56 @@
 <header class="page__header">
   <div class="row m-col-2 l-col-2 menu">
     <div class="col header__menu-logo">
-      <h1>Metrolics</h1>
+      <div class="header__menu-logo__text">
+        <h1>Metrolics</h1>
+      </div>
+      <div class="header__menu-logo__icon">
+        <img src="images/Screenshot 2024-02-09 at 1.05.30 PM.svg">
+      </div>
     </div>
     <div class="col header__menu-nav">
       <div class="header__menu-nav__item">
-        Home
+        <div class="header__menu-nav__item__image lighter__green__background">
+          <img src="images/fi-xnsuhl-house-solid.svg">
+        </div>
+        <div class="header__menu-nav__item__text">
+          <p>Home</p>
+        </div>
       </div>
       <div class="header__menu-nav__item">
-      Pages
+        <div class="header__menu-nav__item__image lighter__yellow__background">
+          <img src="images/fi-xnsuxl-data-structure-solid.svg">
+        </div>
+        <div class="header__menu-nav__item__text">
+          <p>Pages &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp></p>
+        </div>
       </div>
       <div class="header__menu-nav__item">
-      Blog
+        <div class="header__menu-nav__item__image lighter__red__background">
+          <img src="images/fi-xnsuxl-megaphone-solid.svg">
+        </div>
+        <div class="header__menu-nav__item__text">
+          <p>Blog&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp></p>
+        </div>
       </div>
       <div class="header__menu-nav__item">
-      Portfolio
+        <div class="header__menu-nav__item__image lighter__blue__background">
+          <img src="images/box.svg">
+        </div>
+        <div class="header__menu-nav__item__text">
+          <p>Portfolio&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp></p>
+        </div>
       </div>
       <div class="header__menu-nav__item">
-        <div class="header__menu-nav__item__image">
-          <img src="images/fi-xnluxl-envelope.svg">
+        <div class="header__menu-nav__item__image lighter__dark-blue__background">
+          <img src="images/fi-xwsuxl-envelope-solid.svg">
         </div>
         <div class="header__menu-nav__item__text">
           <p>Home</p>
         </div>
       </div>
     </div>
+    <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
 </header>
 
 <main>
