Adding 3/4s of the footer

--- a/index.html
+++ b/index.html
@@ -209,17 +209,66 @@
 <footer class="page__footer">
   <div class="row m-col-2 l-col-4 footer">
     <div class="col m-row-span l-row-span footer-heading">
-      <h3>Peewee Herman</h3>
-      <p>Peewee has over 10 years experience in the industry. He is our Creative Director, digital designer, web designer and front-end developer. He is also pretty good with a sketchbook. Before starting the company Peewee worked as a designer and studio manager for a design house who boasted a number of big name clients.</p>
+      <div class="footer-heading-content">
+        <div class="footer-heading-image">
+          <img src="images/otter17.jpeg">
+        </div>
+        <div class="footer-heading-text">
+          <h3>Peewee Otter</h3>
+          <p>Peewee has over 10 years experience in the industry. He is our Creative Otter, otter designer, web designer and front-end otter developer. He is also pretty good with a sketchbook. Before starting the company Peewee worked as a designer and studio manager for an otter house who boasted a number of big name otters.</p>
+        </div>
+      </div>
     </div>
     <div class="col footer-item">
-      <h3>About Us</h3>
+      <div class="footer-item-text green-line">
+        <h3>About Us</h3>
+      </div>
+      <div class="footer-item-content">
+        <div class="footer-item-body-text">
+          <p>
+            Otter ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod ante a sem maximus, quis sodales metus sagittis. Curabitur gravida vestibulum placerat. Integer vel erat euismod, condimentum nibh non, convallis velit. Suspendisse erat metus, placerat eu ipsum non, euismod elementum enim.
+          </p>
+        </div>
+        <div class="footer-body-icons">
+          <i class="fa fa-facebook fa-1x facebook-background" aria-hidden="true"></i>
+          <i class="fa fa-google-plus-official fa-1x google-background" aria-hidden="true"></i>
+          <i class="fa fa-twitter fa-1x twitter-background" aria-hidden="true"></i>
+          <i class="fa fa-instagram fa-1x instagram-background" aria-hidden="true"></i>
+          <i class="fa fa-wifi fa-1x wifi-background" aria-hidden="true"></i>
+        </div>
+      </div>
     </div>
     <div class="col footer-item">
-      <h3>Flickr Photos</h3>
+      <div class="footer-item-text yellow-line">
+        <h3>Flickr Photos</h3>
+      </div>
+      <div class="footer-item-content-photos">
+        <img src="images/otter18.jpg">
+        <img src="images/otter19.jpg">
+        <img src="images/otter20.jpg">
+        <img src="images/otter21.jpg">
+        <img src="images/otter22.jpg">
+        <img src="images/otter23.jpg">
+      </div>
     </div>
     <div class="col footer-item">
-      <h3>Recent Tweets</h3>
+      <div class="footer-item-text red-line">
+        <h3>Recent Tweets</h3>
+      </div>
+      <div class="footer-item-content-twitter">
+        <div class="footer-item-twitter-icon">
+          <i class="fa fa-twitter" aria-hidden="true"></i>
+        </div>
+        <div class="footer-item-twitter-text">
+          <p><span class="tweet">@ Otter</span> - ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod ante a sem maximus.</p>
+        </div>
+        <div class="footer-item-twitter-icon">
+          <i class="fa fa-twitter" aria-hidden="true"></i>
+        </div>
+        <div class="footer-item-twitter-text">
+          <p><span class="tweet">@ Otter</span> - ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod ante a sem maximus.</p>
+        </div>
+      </div>
     </div>
     <div class="col footer-item">
       <h3>Newsletter</h3>
