Finishing footer, fixing some colours and spacing, and final touchups

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </div>
         <img src="images/otter7.jpg" alt="Otter Fall">
         <div class="image-text image-text--m">
-          <h5>Sample Image Post</h5>
+          <h5>Sample Otter Post</h5>
           <p>Photography</p>
           <i class="fa fa-camera" aria-hidden="true"></i>
         </div>
@@ -165,7 +165,7 @@
         </div>
         <img src="images/otter8.jpg" alt="Sleepy Otter">
         <div class="image-text">
-          <h5>Sample Image Post</h5>
+          <h5>Sample Otter Post</h5>
           <p>Photography</p>
           <i class="fa fa-camera" aria-hidden="true"></i>
         </div>
@@ -177,7 +177,7 @@
         </div>
         <img src="images/otter9.jpg" alt="Madi the Otter">
         <div class="image-text">
-          <h5>Sample Image Post</h5>
+          <h5>Sample Otter Post</h5>
           <p>Photography</p>
           <i class="fa fa-camera" aria-hidden="true"></i>
         </div>
@@ -189,7 +189,7 @@
         </div>
         <img src="images/otter12.jpg" alt="Madi the Otter">
         <div class="image-text">
-          <h5>Sample Image Post</h5>
+          <h5>Sample Otter Post</h5>
           <p>Photography</p>
           <i class="fa fa-camera" aria-hidden="true"></i>
         </div>
@@ -206,7 +206,7 @@
       <div class="col image">
         <img src="images/otter1.jpg" alt="Curious Otter">
         <div class="image-text--cover">
-          <h5>Sample Image Post</h5>
+          <h5>Sample Otter Post</h5>
           <p>Photography</p>
           <i class="fa fa-file-o" aria-hidden="true"></i>
         </div>
@@ -214,7 +214,7 @@
       <div class="col image">
         <img src="images/otter2.jpg" alt="Teasing Otter">
         <div class="image-text--file">
-          <h5>Sample Image Post</h5>
+          <h5>Sample Otter Post</h5>
           <p>Photography</p>
           <i class="fa fa-file-o" aria-hidden="true"></i>
         </div>
@@ -222,7 +222,7 @@
       <div class="col image">
         <img src="images/otter3.jpg" alt="Otter Playing Dead">
         <div class="image-text--file">
-          <h5>Sample Image Post</h5>
+          <h5>Sample Otter Post</h5>
           <p>Photography</p>
           <i class="fa fa-file-o" aria-hidden="true"></i>
         </div>
@@ -230,7 +230,7 @@
       <div class="col image">
         <img src="images/otter4.jpg" alt="Pondering Otter">
         <div class="image-text--file">
-          <h5>Sample Image Post</h5>
+          <h5>Sample Otter Post</h5>
           <p>Photography</p>
           <i class="fa fa-file-o" aria-hidden="true"></i>
         </div>
@@ -238,7 +238,7 @@
       <div class="col image">
         <img src="images/otter5.jpg" alt="Loving Otters">
         <div class="image-text--file">
-          <h5>Sample Image Post</h5>
+          <h5>Sample Otter Post</h5>
           <p>Photography</p>
           <i class="fa fa-file-o" aria-hidden="true"></i>
         </div>
@@ -246,7 +246,7 @@
       <div class="col image">
         <img src="images/otter6.jpg" alt="Wise Otter">
         <div class="image-text--file">
-          <h5>Sample Image Post</h5>
+          <h5>Sample Otter Post</h5>
           <p>Photography</p>
           <i class="fa fa-file-o" aria-hidden="true"></i>
         </div>
@@ -307,7 +307,7 @@
         <h3>About Us</h3>
       </div>
       <div class="footer-item-content">
-        <div class="footer-item-body-text">
+        <div class="footer-item-body-text about-us">
           <p>
             Otter ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod ante a sem maximus, quis sodales metus sagittis. Curabitur gravida vestibulum placerat. Integer vel erat euismod, condimentum nibh non, convallis velit. Suspendisse erat metus, placerat eu ipsum non, euismod elementum enim.
           </p>
@@ -321,7 +321,7 @@
         </div>
       </div>
     </div>
-    <div class="col footer-item">
+    <div class="col footer-item flickr-photos">
       <div class="footer-item-text yellow-line">
         <h3>Flickr Photos</h3>
       </div>
@@ -338,23 +338,36 @@
       <div class="footer-item-text red-line">
         <h3>Recent Tweets</h3>
       </div>
-      <div class="footer-item-content-twitter">
-        <div class="footer-item-twitter-icon">
-          <i class="fa fa-twitter" aria-hidden="true"></i>
+        <div class="footer-item-recent-tweets">
+          <div class="footer-item-content-twitter">
+            <div class="footer-item-twitter-icon">
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+            </div>
+            <div class="footer-item-twitter-text">
+              <p><span class="tweet">@ Otter</span> - ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod ante a sem maximus.</p>
+            </div>
+          </div>
+          <div class="footer-item-content-twitter">
+            <div class="footer-item-twitter-icon">
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+            </div>
+            <div class="footer-item-twitter-text">
+              <p><span class="tweet">@ Otter</span> - ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod ante a sem maximus.</p>
+            </div>
+          </div>
         </div>
-        <div class="footer-item-twitter-text">
-          <p><span class="tweet">@ Otter</span> - ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod ante a sem maximus.</p>
-        </div>
-        <div class="footer-item-twitter-icon">
-          <i class="fa fa-twitter" aria-hidden="true"></i>
-        </div>
-        <div class="footer-item-twitter-text">
-          <p><span class="tweet">@ Otter</span> - ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod ante a sem maximus.</p>
-        </div>
-      </div>
     </div>
-    <div class="col footer-item">
-      <h3>Newsletter</h3>
+    <div class="col footer-item newsletter">
+      <div class="footer-item-text blue-line">
+        <h3>Newsletter</h3>
+      </div>
+      <div class="footer-newsletter-text">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod ante a sem maximus, quis sodales metus sagittis. Curabitur gravida vestibulum placerat. Integer vel erat euismod, condimentum nibh non, convallis velit.
+        </p>
+      <div class="email-input">
+        <input placeholder="Enter your Email..."><button><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
+      </div>
     </div>
   </div>
 </footer>
